Continue from last work

--- a/_posts/1900-01-02-trans-values.html
+++ b/_posts/1900-01-02-trans-values.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: translate
+title: Translate
 is_angular: true
+tags: [peopletools, peoplesoft]
 ---
 
 {% include angular.html %}
