Update timestamp on htmls.  Added posts.

--- a/_posts/1900-01-02-trans-values.html
+++ b/_posts/1900-01-02-trans-values.html
@@ -23,7 +23,7 @@ tags: [peopletools, peoplesoft]
             <label for="tbl_alias">Main Table Alias</label>
             <input type="text" name="" id="tbl_alias" ng-model="m_tbl_alias">
 
-<pre>
+<pre class='highlight'> 
 {% raw %}
 SELECT --{{ m_tbl_alias }}.{{ m_fldname }}, 
 {{ m_xlat_alias }}.XLATLONGNAME
